k8s/apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: asta
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "1"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: music
          hostPath:
            path: /home/anastasia/media/music
            type: Directory
