k8s/apps/navidrome/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-api
  namespace: navidrome
spec:
  ingressClassName: nginx
  rules:
    - host: navidrome.${TAILNET_DOMAIN}
      http:
        paths:
          - path: /rest/
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
